todo application/manifests/broadcast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcast-dep
  namespace: todoapp
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcast
  template:
    metadata:
      labels:
        app: broadcast
    spec:
      containers:
        - name: broadcast 
          image: BROADCAST/IMAGE
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
            requests:
              cpu: "1m"
              memory: "1Mi"
