todo application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
  namespace: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim

      containers:
        - name: todo-app
          image: eeritvan/todo_app:latest
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/image

        - name: todo-backend
          image: eeritvan/todo_backend:latest
        - name: image-generator
          image: eeritvan/image_generator_app:latest
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/image
