todo application/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-backend-dep
  namespace: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause:
            duration: 30
        - analysis:
            templates:
              - templateName: cpu-monitor
        - setWeight: 50
        - pause:
            duration: 30
        - analysis:
            templates:
              - templateName: cpu-monitor
        - setWeight: 100
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: BACKEND/IMAGE
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /health
               port: 3001
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            httpGet:
               path: /health
               port: 3001
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
            requests:
              cpu: "1m"
              memory: "1Mi"
