todo application/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: todoapp
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
