todo application/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: todoapp
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
