todo application/manifests/todo-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: todoapp
spec:
  ports:
  - port: 3002
    name: db
  clusterIP: None
  selector:
    app: todosdb

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: todoapp
spec:
  serviceName: postgres-svc
  replicas: 2
  selector:
    matchLabels:
      app: todosdb
  template:
    metadata:
      labels:
        app: todosdb
    spec:
      volumes:
        - name: config
          configMap:
            name: config
      containers:
        - name: todopostgres
          image: postgres:16-alpine
          ports:
            - name: db
              containerPort: 3002
          volumeMounts:
            - name: config
              mountPath: /docker-entrypoint-initdb.d
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Mi
